hastebin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${SERVICE_NAME}
  namespace: josh-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${SERVICE_NAME}
  template:
    metadata:
      labels:
        app: ${SERVICE_NAME}
    spec:
      nodeSelector:
        location: na
      containers:
        - name: ${SERVICE_NAME}
          image: ${IMAGE_LOCATION}
          resources:
            limits:
              cpu: ${CPU_LIMIT}
              memory: ${MEMORY_LIMIT}
            requests:
              cpu: ${CPU_REQUEST}
              memory: ${MEMORY_REQUEST}
          ports:
            - containerPort: 7777
          volumeMounts:
            - mountPath: /app/data
              name: fs-volume
      volumes:
        - name: fs-volume
          emptyDir: {}
        # - name: fs-volume
        #   persistentVolumeClaim:
        #     claimName: hastebin
